Fix: updated code changes

--- a/index.html
+++ b/index.html
@@ -1,5 +1,17 @@
 <!doctype html>
 <html lang="en">
+  <!-- Page Title -->
+<meta property="og:title" content="Grocy Clone – Personal Grocery & Household Manager">
+
+<!-- Page Description -->
+<meta property="og:description" content="A web-based grocery and household management system built using React and Tailwind CSS. Track groceries, manage shopping lists, and organize household items efficiently.">
+
+<!-- Thumbnail / Image -->
+<meta property="og:image" content="https://first-react-project-alpha-gules.vercel.app/thumbnail.png">
+
+<!-- Project URL -->
+<meta property="og:url" content="https://first-react-project-alpha-gules.vercel.app/">
+
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
